[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-compact = "2"
base64 = "0.20.0"
libsecp256k1 = "0.7.1"
tiny-keccak = "2.0.2"
ethereum-types = "0.14.1"
hex = "0.4.3"
base58 = "0.2"
log = "0.4.14"
eyre = "0.6.5"