[package]
name = "keccak-hasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-db = { version = "0.16.0", default-features = false }
hash256-std-hasher = { version = "0.15.2", optional = true }
tiny-keccak = { version = "2.0.2", features = ["keccak"],  optional = true }

[features]
default = ["std"]
std = [
    "hash256-std-hasher",
    "tiny-keccak",
    "hash-db/std"
]